# fanboxget

./: .gitignore  README.md  pyproject.toml
fanboxget/: __init__.py  cli.py
javascript/: fanboxparse.js
tests/: test_fanboxget.py
